// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArrowGraphic/> should render component 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container"
    style="margin-top: 25px;"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      style="text-align: center;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
        focusable="false"
        opacity="0.6"
        style="font-size: 70px; fill: #999999;"
        viewBox="0 0 20 20"
      >
        <path
          d="M 19.844 10.376 C 20.052 10.168 20.052 9.832 19.844 9.625 L 16.465 6.246 C 16.259 6.038 15.922 6.038 15.714 6.246 C 15.508 6.453 15.508 6.789 15.714 6.997 L 18.719 10 L 15.714 13.004 C 15.508 13.211 15.508 13.548 15.714 13.755 C 15.922 13.962 16.259 13.962 16.465 13.755 L 19.844 10.376 Z M 0 10.531 L 19.469 10.531 L 19.469 9.469 L 0 9.469 L 0 10.531 Z"
        />
      </svg>
       
    </div>
  </div>
</div>
`;

exports[`<CompactVault/> should render component 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter"
      >
        Vault
      </h6>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-content-xs-center MuiGrid-grid-xs-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <rect
          fill="#708B96"
          height="20"
          rx="15"
          width="20"
        />
        <path
          d="M 5.333 9.632 L 5.333 6.436 C 5.333 6.32 5.378 6.209 5.458 6.128 C 5.537 6.046 5.645 6 5.758 6 L 14.242 6 C 14.355 6 14.463 6.046 14.542 6.128 C 14.622 6.209 14.667 6.32 14.667 6.436 L 14.667 9.632 C 14.667 14.206 10.886 15.72 10.133 15.976 C 10.047 16.008 9.953 16.008 9.867 15.976 C 9.114 15.72 5.333 14.206 5.333 9.632 Z"
          fill="#708B96"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M 12 9.333 L 9.332 12 L 8 10.667"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter"
      >
        1.00 sOHM deposited
      </h6>
    </div>
  </div>
</div>
`;

exports[`<CompactWallet/> should render component 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter"
      >
        Wallet
      </h6>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-content-xs-center MuiGrid-grid-xs-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <rect
          fill="#708B96"
          height="20"
          rx="15"
          width="20"
        />
        <path
          d="M 12.921 11.726 C 13.398 11.726 13.784 11.339 13.784 10.863 C 13.784 10.386 13.398 10 12.921 10 C 12.445 10 12.059 10.386 12.059 10.863 C 12.059 11.339 12.445 11.726 12.921 11.726 Z"
          fill="white"
        />
        <path
          d="M 5.372 6.764 L 5.372 13.452 C 5.372 13.68 5.463 13.9 5.624 14.062 C 5.786 14.223 6.006 14.314 6.235 14.314 L 14.863 14.314 C 14.978 14.314 15.088 14.269 15.169 14.188 C 15.249 14.107 15.295 13.997 15.295 13.883 L 15.295 8.274 C 15.295 8.16 15.249 8.05 15.169 7.969 C 15.088 7.888 14.978 7.843 14.863 7.843 L 6.477 7.843 C 6.194 7.846 5.921 7.739 5.715 7.545 C 5.509 7.351 5.386 7.085 5.372 6.802 C 5.367 6.657 5.391 6.513 5.443 6.378 C 5.495 6.242 5.573 6.119 5.674 6.015 C 5.775 5.911 5.895 5.828 6.029 5.771 C 6.162 5.715 6.305 5.685 6.45 5.686 L 13.569 5.686"
          fill="none"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter"
      >
        1.00 sOHM retained
      </h6>
    </div>
  </div>
</div>
`;

exports[`<CompactYield/> should render component 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter"
      >
        Recipient
      </h6>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-content-xs-center MuiGrid-grid-xs-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <rect
          fill="#708B96"
          height="20"
          rx="15"
          width="20"
        />
        <path
          d="M 10 9.333 C 11.289 9.333 12.333 8.289 12.333 7 C 12.333 5.711 11.289 4.667 10 4.667 C 8.711 4.667 7.667 5.711 7.667 7 C 7.667 8.289 8.711 9.333 10 9.333 Z"
          fill="none"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M 5.333 14.667 L 5.333 11.667 C 5.877 10.942 6.581 10.354 7.391 9.949 C 8.201 9.544 9.094 9.333 10 9.333 C 10.906 9.333 11.799 9.544 12.609 9.949 C 13.419 10.354 14.123 10.942 14.667 11.667 L 14.667 14.667"
          fill="none"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M 8.333 13.333 L 11.667 13.333"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M 10 11.667 L 10 15"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter"
      >
        Receives yield from 1.00 sOHM
      </h6>
    </div>
  </div>
</div>
`;

exports[`<LargeVault/> should render component 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-content-xs-center MuiGrid-grid-xs-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <rect
          fill="#708B96"
          height="20"
          rx="15"
          width="20"
        />
        <path
          d="M 5.333 9.632 L 5.333 6.436 C 5.333 6.32 5.378 6.209 5.458 6.128 C 5.537 6.046 5.645 6 5.758 6 L 14.242 6 C 14.355 6 14.463 6.046 14.542 6.128 C 14.622 6.209 14.667 6.32 14.667 6.436 L 14.667 9.632 C 14.667 14.206 10.886 15.72 10.133 15.976 C 10.047 16.008 9.953 16.008 9.867 15.976 C 9.114 15.72 5.333 14.206 5.333 9.632 Z"
          fill="#708B96"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M 12 9.333 L 9.332 12 L 8 10.667"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <p
        class="MuiTypography-root subtext MuiTypography-body1 MuiTypography-alignCenter"
      >
        Vault
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
      >
        Lock sOHM in vault
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
      >
        Then, your deposited sOHM is kept in a vault smart contract that will send your rebases to the recipient.
You can withdraw or edit your principal sOHM amount at any time.
      </p>
    </div>
  </div>
</div>
`;

exports[`<LargeWallet/> should render component 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-content-xs-center MuiGrid-grid-xs-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <rect
          fill="#708B96"
          height="20"
          rx="15"
          width="20"
        />
        <path
          d="M 12.921 11.726 C 13.398 11.726 13.784 11.339 13.784 10.863 C 13.784 10.386 13.398 10 12.921 10 C 12.445 10 12.059 10.386 12.059 10.863 C 12.059 11.339 12.445 11.726 12.921 11.726 Z"
          fill="white"
        />
        <path
          d="M 5.372 6.764 L 5.372 13.452 C 5.372 13.68 5.463 13.9 5.624 14.062 C 5.786 14.223 6.006 14.314 6.235 14.314 L 14.863 14.314 C 14.978 14.314 15.088 14.269 15.169 14.188 C 15.249 14.107 15.295 13.997 15.295 13.883 L 15.295 8.274 C 15.295 8.16 15.249 8.05 15.169 7.969 C 15.088 7.888 14.978 7.843 14.863 7.843 L 6.477 7.843 C 6.194 7.846 5.921 7.739 5.715 7.545 C 5.509 7.351 5.386 7.085 5.372 6.802 C 5.367 6.657 5.391 6.513 5.443 6.378 C 5.495 6.242 5.573 6.119 5.674 6.015 C 5.775 5.911 5.895 5.828 6.029 5.771 C 6.162 5.715 6.305 5.685 6.45 5.686 L 13.569 5.686"
          fill="none"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <p
        class="MuiTypography-root subtext MuiTypography-body1 MuiTypography-alignCenter"
      >
        Wallet
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
      >
        Deposit sOHM from wallet
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
      >
        Olympus Give is a means of directing the yield that is accrued on your sOHM to another wallet. The first step is depositing your sOHM and specifying a recipient.
      </p>
    </div>
  </div>
</div>
`;

exports[`<LargeYield/> should render component 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-content-xs-center MuiGrid-grid-xs-12"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
        focusable="false"
        viewBox="0 0 20 20"
      >
        <rect
          fill="#708B96"
          height="20"
          rx="15"
          width="20"
        />
        <path
          d="M 10 9.333 C 11.289 9.333 12.333 8.289 12.333 7 C 12.333 5.711 11.289 4.667 10 4.667 C 8.711 4.667 7.667 5.711 7.667 7 C 7.667 8.289 8.711 9.333 10 9.333 Z"
          fill="none"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M 5.333 14.667 L 5.333 11.667 C 5.877 10.942 6.581 10.354 7.391 9.949 C 8.201 9.544 9.094 9.333 10 9.333 C 10.906 9.333 11.799 9.544 12.609 9.949 C 13.419 10.354 14.123 10.942 14.667 11.667 L 14.667 14.667"
          fill="none"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M 8.333 13.333 L 11.667 13.333"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
        <path
          d="M 10 11.667 L 10 15"
          stroke="white"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <p
        class="MuiTypography-root subtext MuiTypography-body1 MuiTypography-alignCenter"
      >
        Recipient
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
      >
        Recipient earns sOHM rebases
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
      >
        The recipient you specified, or the project you selected, will then receive the rebases associated with your
sOHM deposit until you withdraw your sOHM principal from the vault.
      </p>
    </div>
  </div>
</div>
`;
